# tuff

./: .clangd  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  compile_flags.txt
compiler/: args.cc  args.hh  compiler.c  compiler.cc  compiler.h  compiler.hh  main.c  module.c  module.h  tuff.cc
compiler/ast/: ast.hh  node.h  node_expr.c  node_expr.h  node_item.h  node_kind.h  type.hh
compiler/diag/: diag.c  diag.h
compiler/error/: error.hh
compiler/lex/: lexer.c  lexer.cc  lexer.h  lexer.hh  loc.h  loc.hh  token.c  token.h  token.hh
compiler/parse/: parse_expr.c  parse_items.c  parser.c  parser.cc  parser.h  parser.hh  parser_expr.cc
compiler/unit/: module.cc  module.hh
examples/: binary_diagnostic.tuf  bubble_sort.tuf  function.tuf  main.tuf  traits.tuf  types.tuf
include/: array.h  array.hh  def.h  def.hh  map.h  map.hh  string.hh  sv.h  sv.hh
libtuff/: CMakeLists.txt  compiler.c  compiler.h  module.c  module.h
libtuff/ast/: node.h  node_expr.c  node_expr.h  node_kind.h  type.h
libtuff/diag/: diag.c
libtuff/lex/: lexer.c  lexer.h  token.h
libtuff/parse/: parse_expr.c  parse_items.c  parser.c  parser.h
libtuff/sema/: prototype.h  scope.c  scope.h  sema_error.h  symbol.c  symbol.h  symbol_resolver.c  symbol_resolver.h
src/: compiler.h  main.c  module.c
src/ast/: node.h  type.c
src/diag/: diag.c  diag.h
src/lex/: lexer.c
src/parse/: parse_expr.c  parser.c
tuffc/: CMakeLists.txt  README.md  args.c  args.h  main.c
tuffy/: CMakeLists.txt  README.md  main.c
